corrigidas aulas 8-12 figuras, referencias e outros

--- a/AED/Aulas_Fonte_Professor/Aula11/Makefile
+++ b/AED/Aulas_Fonte_Professor/Aula11/Makefile
@@ -1,14 +1,14 @@
 FILE = Aula11_AED
 
 all:
-	pdflatex $(FILE).tex
+	pdflatex -interaction=batchmode $(FILE).tex
 	bibtex $(FILE)
 	bibtex $(FILE)
 	pdflatex  -interaction=batchmode $(FILE).tex 
 	pdflatex  -interaction=batchmode $(FILE).tex 
-	#cp $(FILE).pdf ../../Aulas_PDF_Alunos/Aula01/$(FILE).pdf
-	#mv $(FILE).pdf ./PDF/$(FILE).pdf
-	open -a Preview $(FILE).pdf
+	cp $(FILE).pdf ../../Aulas_PDF_Alunos/Aula11/$(FILE).pdf
+	mv $(FILE).pdf ./PDF/$(FILE).pdf
+	open -a Preview ./PDF/$(FILE).pdf
 	make clean
 	clear
 draft:
