ajustes finos nos slides da disciplina TCC2

--- a/TCC_02/Aulas_Fonte_Professor/Aula01/Makefile
+++ b/TCC_02/Aulas_Fonte_Professor/Aula01/Makefile
@@ -1,7 +1,7 @@
 FILE = Aula01_TCC_02
 
 all:
-	pdflatex $(FILE).tex
+	pdflatex -interaction=batchmode $(FILE).tex
 	bibtex $(FILE)
 	bibtex $(FILE)
 	pdflatex -interaction=batchmode $(FILE).tex 
