--- a/TCC_02/Aulas_Fonte_Professor/Aula03/Makefile
+++ b/TCC_02/Aulas_Fonte_Professor/Aula03/Makefile
@@ -1,12 +1,12 @@
 FILE = Aula03_TCC_02
 
 all:
-	pdflatex $(FILE).tex
+	pdflatex -interaction=batchmode $(FILE).tex
 	bibtex $(FILE)
 	bibtex $(FILE)
 	pdflatex -interaction=batchmode $(FILE).tex 
 	pdflatex -interaction=batchmode $(FILE).tex 
-	cp $(FILE).pdf ../../Aulas_PDF_Alunos/Aula01/$(FILE).pdf
+	cp $(FILE).pdf ../../Aulas_PDF_Alunos/Aula03/$(FILE).pdf
 	mv $(FILE).pdf ./PDF/$(FILE).pdf
 	open -a Preview ./PDF/$(FILE).pdf
 	make clean
